--- a/package.json
+++ b/package.json
@@ -22,15 +22,20 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.12.0",
+    "css-loader": "^3.0.0",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4"
   },
   "dependencies": {
+    "antd": "^3.19.6",
+    "axios": "^0.19.0",
     "color-convert": "^2.0.0",
     "express": "^4.17.1",
     "jimp": "^0.6.4",
     "png-js": "^0.1.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "style-loader": "^0.23.1"
   }
 }
